# Markten

./: .harper-dictionary.txt  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  python-app.yml
docs/: hooks.md
examples/: cat.py  clone_and_open.py  mailer.py  multicat.py  temp_dir.py  timer.py
markten/: __action_session.py  __cli.py  __consts.py  __init__.py  __iterator.py  __main__.py  __markten.py  __permutations.py  __recipe.py  __spinners.py  __task_manager.py  __term_tools.py  __utils.py  more_itertools.py
markten/__recipe/: hook.py  parameters.py  recipe.py  runner.py  step.py
markten/actions/: __action.py  __async_process.py  __editor.py  __email.py  __fs.py  __git.py  __gitlab.py  __init__.py  __misc.py  __process.py  editor.py  email.py  fs.py  git.py  process.py  python.py  time.py  webbrowser.py
markten/actions/editor/: __init__.py  __interface.py  __pulsar.py  __vs_code.py  __zed.py
markten/generators/: __init__.py  __io.py
markten/parameters/: __fs.py  __init__.py  __io.py
tests/actions/: fs_test.py  process_test.py
tests/parameters/: list_dir_test.py  stdin_test.py
